[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/GameCamera/GameCamera.gd" type="Script" id=1]

[node name="GameCamera" type="Position3D"]
script = ExtResource( 1 )

[node name="DefaultCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.817396, 0.576076, 0, -0.576076, 0.817396, 0, 1, 1 )

[node name="TopDownCamera" type="Camera" parent="."]
transform = Transform( 2.68221e-07, -1, 3.34849e-08, 2.80971e-08, 3.34849e-08, 1, -1, -2.68221e-07, 2.80971e-08, 0, 3.57128, 0 )
